Tests/CompilerTests/negative/invalid-return.expected
negative/invalid-return.hylo:4.3-8: error: no coercion from '{Void}' to 'Void'
  ((),)
  ~~~~~
negative/invalid-return.hylo:8.10-15: error: no coercion from '{Void}' to 'Void'
  return ((),)
         ~~~~~
negative/invalid-return.hylo:12.3: error: expected value of type 'A'
  return
  ^
